all basic functionality for server done
