# server/src/server_functions.rs
@@ -1,5 +1,6 @@
 use rusqlite::{ Connection, Result };
-use rocket::serde::{ Serialize };
+use rocket::serde::{ Serialize, Deserialize };
+use rand::Rng;
 
 pub fn setup_database(connector: &impl DatabaseConnector) -> Result<(), rusqlite::Error> {
     let connection = connector.open()?;
@@ -25,15 +26,16 @@ pub fn setup_database(connector: &impl DatabaseConnector) -> Result<(), rusqlite
     let mut stmt = connection.prepare(orders_exists_query)?;
     let orders_table_exists = stmt.exists([])?;
 
-
-
     if !orders_table_exists {
         connection.execute("
             CREATE TABLE orders (
                 internal_id INTEGER PRIMARY KEY,
                 id INTEGER UNIQUE,
                 menu_item_id INTEGER,
-                FOREIGN KEY(menu_item_id) REFERENCES menu_items(internal_id));", ())?;
+                table_number INTEGER,
+                minutes_to_cook INTEGER,
+                FOREIGN KEY(menu_item_id) REFERENCES menu_items(internal_id),
+                UNIQUE (id, table_number) ON CONFLICT ABORT);", ())?;
     }
     Result::Ok(())
 }
@@ -42,7 +44,7 @@ pub fn table_orders(table_id: &str) -> &str {
     return "HI"
 }
 
-pub fn menu_items(connector: &impl DatabaseConnector) -> Result<MenuItemResponse, rusqlite::Error> {
+pub fn get_menu_items(connector: &impl DatabaseConnector) -> Result<MenuItemResponse, rusqlite::Error> {
     let connection = connector.open()?;
     let query = "SELECT id, name FROM menu_items";
     let mut stmt = connection.prepare(query)?;
@@ -65,6 +67,86 @@ pub fn menu_items(connector: &impl DatabaseConnector) -> Result<MenuItemResponse
     )
 }
 
+pub fn add_orders(connector: &impl DatabaseConnector, table_id: u32, orders: OrdersPostData) -> Result<(), rusqlite::Error> {
+    let mut connection = connector.open()?;
+    let transaction = connection.transaction()?;
+
+    for order in &orders.orders {
+        let cook_time = rand::thread_rng().gen_range(5..15);
+        transaction.execute(
+            "INSERT INTO orders (id, menu_item_id, table_number, minutes_to_cook)
+            SELECT :order_id, m.internal_id, :table_id, :cook_time FROM menu_items AS m WHERE m.id = :menu_item_id",
+            &[
+                (":order_id", &order.order_id.to_string()),
+                (":table_id", &table_id.to_string()),
+                (":cook_time", &cook_time.to_string()),
+                (":menu_item_id", &order.menu_item_id.to_string())])?;
+    };
+
+    transaction.commit()?;
+
+    Result::Ok(())
+}
+
+pub fn get_orders(connector: &impl DatabaseConnector, table_number: u32) -> Result<OrdersResponse, rusqlite::Error> {
+    let connection = connector.open()?;
+    let mut stmt = connection.prepare(
+        "SELECT o.id, o.minutes_to_cook, m.id, m.name
+        FROM orders AS o
+        INNER JOIN menu_items AS m ON m.internal_id = o.menu_item_id
+        WHERE o.table_number = :table_number")?;
+    let query_result = stmt.query_map(
+        &[(":table_number", &table_number.to_string())],
+        |row| Result::Ok(OrderResponse {
+            order_id: row.get(0)?,
+            minutes_to_cook: row.get(1)?,
+            menu_item_id: row.get(2)?,
+            menu_item_name: row.get(3)?
+        }))?;
+
+    let mut items = Vec::new();
+    for item in query_result {
+        items.push(item?);
+    }
+
+    Result::Ok(
+        OrdersResponse {
+            orders: items
+        }
+    )
+}
+
+pub fn get_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<OrderResponse, rusqlite::Error> {
+    let connection = connector.open()?;
+    let mut stmt = connection.prepare(
+        "SELECT o.id, o.minutes_to_cook, m.id, m.name
+        FROM orders AS o
+        INNER JOIN menu_items AS m ON m.internal_id = o.menu_item_id
+        WHERE o.table_number = :table_number
+        AND o.id = :order_id")?;
+    let query_result = stmt.query_row(
+        &[(":table_number", &table_number.to_string()), (":order_id", &order_id.to_string())],
+        |row| Result::Ok(OrderResponse {
+            order_id: row.get(0)?,
+            minutes_to_cook: row.get(1)?,
+            menu_item_id: row.get(2)?,
+            menu_item_name: row.get(3)?
+        }))?;
+
+    Result::Ok(query_result)
+}
+
+pub fn delete_order(connector: &impl DatabaseConnector, table_number: u32, order_id: u32) -> Result<(), rusqlite::Error> {
+    let connection = connector.open()?;
+    connection.execute(
+        "DELETE FROM orders
+            WHERE table_number = :table_number AND id = :order_id",
+        &[
+            (":table_number", &table_number.to_string()),
+            (":order_id", &order_id.to_string())])?;
+    Result::Ok(())
+}
+
 #[derive(Serialize)]
 #[serde(crate = "rocket::serde")]
 pub struct MenuItem {
@@ -76,6 +158,34 @@ pub struct MenuItem {
 #[serde(crate = "rocket::serde")]
 pub struct MenuItemResponse {
     menu_items: Vec<MenuItem>
+}
+
+#[derive(Serialize)]
+#[serde(crate = "rocket::serde")]
+pub struct OrdersResponse {
+    orders: Vec<OrderResponse>
+}
+
+#[derive(Serialize)]
+#[serde(crate = "rocket::serde")]
+pub struct OrderResponse {
+    order_id: u32,
+    menu_item_id: u32,
+    menu_item_name: String,
+    minutes_to_cook: u32
+}
+
+#[derive(Deserialize)]
+#[serde(crate = "rocket::serde")]
+pub struct OrderPostData {
+    order_id: u32,
+    menu_item_id: u32
+}
+
+#[derive(Deserialize)]
+#[serde(crate = "rocket::serde")]
+pub struct OrdersPostData {
+    orders: Vec<OrderPostData>
 }
 
 pub trait DatabaseConnector {
